add java stream comments